--- a/vignettes/sample-planning.Rmd
+++ b/vignettes/sample-planning.Rmd
@@ -169,7 +169,8 @@ planning(materiality = 0.03, likelihood = "binomial", expected = c(3, 1, 0))
 ```
 
 Again, this can be verified by making sure that the probability of incorrectly
-rejecting the null hypothesis is below the audit risk $\alpha$ = 0.05.
+rejecting the null hypothesis of three percent misstatement is below the audit
+risk $\alpha$ = 0.05.
 
 ```{r}
 p_k2_n1 <- pbinom(q = 2, size = 210, prob = 0.03)
@@ -177,7 +178,7 @@ p_k3_n1 <- pbinom(q = 3, size = 210, prob = 0.03)
 p_k1_n2 <- pbinom(q = 1, size = 210, prob = 0.03)
 p_k2_n2 <- pbinom(q = 2, size = 210, prob = 0.03)
 p_k0_n3 <- pbinom(q = 0, size = 210, prob = 0.03)
-p_k2_n1 + (p_k3_n1 * p_k1_n2) + (p_k3_n1 * p_k2_n2 * p_k0_n3) < 0.05
+p_k2_n1 + p_k3_n1 * p_k1_n2 + p_k3_n1 * p_k2_n2 * p_k0_n3 < 0.05
 ```
 
 The sample size for per stage is only slightly higher than the sample size for
