--- a/vignettes/references.bib
+++ b/vignettes/references.bib
@@ -386,3 +386,14 @@
   publisher={Springer},
   doi={10.3758/s13423-014-0595-4}
 }
+@article{edwards_1963,
+  title={{B}ayesian statistical inference for psychological research.},
+  author={Edwards, Ward and Lindman, Harold and Savage, Leonard J},
+  journal={Psychological review},
+  volume={70},
+  number={3},
+  pages={193},
+  year={1963},
+  publisher={American Psychological Association},
+  doi={10.1037/h0044139}
+}
