--- a/vignettes/sample-planning.Rmd
+++ b/vignettes/sample-planning.Rmd
@@ -81,146 +81,150 @@ value.
 
 #### Single-stage sampling plans
 
-Concretely, in a single-stage sampling plan the auditor wants to directly apply
-the sampling objective. More specifically, they want to reduce the risk of the
-misstatements $k$ coming from a population in which the misstatement rate is
-equal to $\theta_{max}$. This risk should be lower than the audit risk $\alpha$.
+In a single-stage sampling plan, the auditor aims to implement the sampling
+objective in its simplest form. Specifically, they aim to minimize the risk of
+the observed misstatements in the sample $k$ originating from a population that
+is materially misstated (i.e., a population in which the misstatement rate is
+equal to, or higher than, $\theta_{max}$). This risk should be less than the
+sampling risk $\alpha$.
 
 \begin{equation}
-  p(k = 0 | n, $\theta_{max}$) \leq \alpha
+  p(k \leq 0 | n, \theta_{max}) \leq \alpha
 \end{equation}
 
-A minimum sample size for this sampling objective can be calculated by
-specifying the `materiality` parameter in the `planning()` function, see the
-command below. Next, a summary of the statistical results can be obtained using
-the `summary()` function. The result shows that, given zero tolerable
-misstatements, the minimum sample size is 99 items or units. The auditor can
-allow for misstatements (e.g., tolerate $k$ = 1 misstament) in the sample by
-providing an integer value to the `expected` argument of the function.
+The minimum sample size for this sampling objective can be computed by
+specifying the `materiality` argument in the `planning()` function. Following
+this, a summary of the statistical results can be obtained using the `summary()`
+function. The results indicates that, assuming $k$ = 0 tolerable misstatements,
+the minimum sample size is $n$ = 99 items or units. The auditor can accommodate
+misstatements (for instance, tolerate $k$ = 1 misstatement) in the sample by
+providing an integer value to the expected argument of the function (e.g.,
+`expected = 1`).
 
 ```{r}
 plan <- planning(materiality = 0.03, likelihood = "binomial", expected = 0)
 summary(plan)
 ```
 
-This can be verified by making sure that the probability of finding $k$ = 0
-misstatements in $n$ = 99 samples given $\theta_{max}$ = 0.03 is lower than the
-audit risk $\alpha$ = 0.05
+To confirm this calculation, we must verify that the probability of detecting
+$k$ = 0 misstatements (or less) in $n$ = 99 samples, given a misstatement rate
+of $\theta_{max}$ = 0.03, is less than the acceptable sampling risk of $\alpha$
+=  0.05.
 
 ```{r}
 pbinom(q = 0, size = 99, prob = 0.03) < 0.05
 ```
 
-#### Multiple-stage sampling plans
+#### Multi-stage sampling plans
 
-Instead of using a single-stage sampling plan, a multi-stage sampling plan
-enables the evaluation of the sample at an intermediate stage. If the results
-do not provide sufficient evidence to make a conclusion, the second stage is
-initiated. More specifically, in the first stage of a multiple-stage sampling
-plan the auditor draws an initial sample of size $n_1$. If this sample contains
-a tolerable number of misstatements (typically 0), then the auditor can approve
-the population. However, if the sample contains more than the tolerable number
-of misstatements, the population cannot be approved. In this case, the initial
-sample is extended with a second sample of $n_2$ items. If this second batch of
-items reveals a tolerable number of misstatements, then the population can still
-be approved. If this is not the case, then the population should be rejected or
-a third sample with $n_3$ items should be inspected.
+A multi-stage sampling plan, as opposed to a single-stage one, allows for an
+intermediate evaluation of the sample. In the first stage of a multi-stage
+sampling plan, the auditor selects an initial sample of size $n_1$. If this
+sample contains a tolerable number of misstatements (usually 0), the auditor can
+approve the population. However, if the sample contains more misstatements than
+the tolerable number, the auditor cannot approve the population. In such a
+scenario, the initial sample is supplemented with a second sample of $n_2$
+items. If this additional sample contains a tolerable number of misstatements,
+the population can still be approved. If not, the population should either be
+rejected or a third sample of $n_3$ items should be added.
 
-In the classical (i.e., frequentist) approach, multiple-stage sampling plans can
-be computed by breaking down the audit risk into several components. For
-instance, if the auditor wants to initially plan for $k$ = 0 misstatements, but
-wants to extend the sample if $k$ = 1 misstatement is found, then the audit risk
-consists of:
+In the classical (i.e., frequentist) methodology, multi-stage sampling plans can
+be formulated by decomposing the sampling risk into multiple components. For
+example, if the auditor initially plans for $k$ = 0 misstatements but considers
+extending the sample if $k$ = 1 misstatement is discovered, then the probability
+of erroneously rejecting the hypothesis of material misstatement comprises:
 
-- $p(k = 0 | n_1, \theta_{max})$: The probability of finding $k$ = 0
+- $p(k \leq 0 | n_1, \theta_{max})$: The probability of finding $k$ = 0
   misstatements in the first sample of $n_1$ items; plus
 - $p(k = 1 | n_1, \theta_{max})$: The probability of finding $k$ = 1
   misstatement in the first sample of $n_1$ items; multiplied by
-- $p(k = 0 | n_2, \theta_{max})$: The probability finding $k$ = 0
+- $p(k \leq 0 | n_2, \theta_{max})$: The probability finding $k$ = 0
   misstatements in the second sample of $n_2$ items.
 
-The sum of these probabilities should be lower than, or equal to, the audit risk
+The sum of these probabilities should be less than or equal to the sampling risk
 $\alpha$.
 
 \begin{equation}
-  p(k = 0 | n_1, \theta_{max}) + p(k = 1 | n_1, \theta_{max}) \cdot p(k = 0 | n_2, \theta_{max}) \leq \alpha
+  p(k \leq 0 | n_1, \theta_{max}) + p(k = 1 | n_1, \theta_{max}) \cdot p(k \leq 0 | n_2, \theta_{max}) \leq \alpha
 \end{equation}
 
-For computational reasons **jfa** specifies the number of samples in the
-extension to be equal to that of the initial sample ($n_1$ = $n_2$ = $n_s$). This
-means that the sample size for a two-stage sampling plan is the smallest integer
-$n$ that satisfies the condition below.
+To constrain the problem, **jfa** sets the number of samples in the extension
+equal to the initial sample size ($n_1$ = $n_2$ = $n_s$). This implies that the
+sample size per stage in this two-stage sampling plan is the smallest integer
+$n_s$ that fulfills the following condition.
 
 \begin{equation}
-  p(k = 0 | n_s, \theta_{max}) + p(k = 1 | n_s, \theta_{max}) \cdot p(k = 0 | n_s, \theta_{max}) \leq \alpha
+  p(k \leq 0 | n_s, \theta_{max}) + p(k = 1 | n_s, \theta_{max}) \cdot p(k \leq 0 | n_s, \theta_{max}) \leq \alpha
 \end{equation}
 
-In **jfa**, multiple-stage sampling plans can be computed by providing an
-integer vector of tolerable misstatements in each stage to the `planning()`
-function via its `expected` argument. For instance, the following code computed
-the sample size required if the auditor wants to initially plan for $k$ = 0
-misstatements, but wants to extend the sample if $k$ = 1 misstatement is found.
-The required sample size per stage is $n_s$ = 103, with a total sample size (if
-both stages are required) of $n$ = 206.
+In **jfa**, multi-stage sampling plans can be calculated by supplying an integer
+vector of misstatements, after which each stage should be extended, to the
+`planning()` function via its `expected` argument. For example, the following
+code calculates the required sample size if the auditor initially plans for $k$
+= 0 misstatements but considers extending the sample if $k$ = 1 misstatement is
+discovered. The required sample size per stage is $n_s$ = 103, resulting in a
+total sample size (if both stages are necessary) of $n$ = 206.
 
 ```{r}
 planning(materiality = 0.03, likelihood = "binomial", expected = c(1, 0))
 ```
 
-The correctness of this calculation can be verified by making sure that the
-probability of incorrectly rejecting the null hypothesis under the binomial
-distribution is below the audit risk $\alpha$ = 0.05.
+To confirm this calculation, we need to ensure that that the probability of
+incorrectly rejecting the null hypothesis of material misstatement, under the
+binomial distribution, is less than the sampling risk $\alpha$ = 0.05.
 
 ```{r}
-p_k0_n1 <- dbinom(x = 0, size = 103, prob = 0.03)
+p_k0_n1 <- pbinom(q = 0, size = 103, prob = 0.03)
 p_k1_n1 <- dbinom(x = 1, size = 103, prob = 0.03)
-p_k0_n2 <- dbinom(x = 0, size = 103, prob = 0.03)
+p_k0_n2 <- pbinom(q = 0, size = 103, prob = 0.03)
 p_k0_n1 + p_k1_n1 * p_k0_n2 < 0.05
 ```
 
-The minimal sample size per stage $n_s$ = 103 is only slightly larger than the
-minimal sample size for the first stage if the auditor decides to use a
-single-stage sampling plan expecting $k$ = 0, which is $n$ = 99.
+The minimum sample size per stage, $n_2$ = 103, is only slighly larger than the
+minimum sample size for the first stage if the auditor opts for a single-stage
+sampling plan expecting $k$ = 0, which is $n$ = 99.
 
 ```{r}
 planning(materiality = 0.03, likelihood = "binomial", expected = 0)
 ```
 
-However, the total sample size $n$ = 206 is considerably larger larger than the
-minimal sample size if the auditor decides to use a single-stage sampling plan
-expecting $k$ = 1, which is $n$ = 157.
+However, the total sample size, $n$ = 206, is considerably larger than the
+minimum sample size if the auditor opts for a single-stage sampling plan
+expecting $k$ = 1, which is $n$ = 157. This illustrates the cost of allowing
+a sample size extension in the classical approach.
 
 ```{r}
 planning(materiality = 0.03, likelihood = "binomial", expected = 1)
 ```
 
-As another example, we discuss a three-stage sampling plan in which the auditor
-wants to extend the sample after finding $k$ = 1 misstatements in the first
-stage, extend further if they find $k$ = 1 misstatement in the second stage, and
-still be able to approve the population if they find $k$ = 0 misstatements in
-the third stage. The required sample size per each of the three stages is $n_s$
-= 208.
+As another example, consider a three-stage sampling plan where the auditor plans
+to extend the sample after finding $k$ = 1 misstatement in the first stage,
+extend further if they find $k$ = 1 misstatement in the second stage, and still
+be able to approve the population if they find $k$ = 0 misstatements in the
+third stage. The required sample size in each of the three stages is $n_s$ =
+208.
 
 ```{r}
 planning(materiality = 0.03, likelihood = "binomial", expected = c(3, 1, 0))
 ```
 
-Again, this can be verified by making sure that the probability of incorrectly
-rejecting the null hypothesis of three percent misstatement is below the audit
-risk $\alpha$ = 0.05.
+This can be confirmed by ensuring that the probability of incorrectly rejecting
+the null hypothesis of the population containing three percent misstatement is
+below the acceptable sampling risk $\alpha$ = 0.05.
 
 ```{r}
 p_k2_n1 <- pbinom(q = 2, size = 208, prob = 0.03)
 p_k3_n1 <- dbinom(x = 3, size = 208, prob = 0.03)
-p_k0_n2 <- dbinom(x = 0, size = 208, prob = 0.03)
+p_k0_n2 <- pbinom(q = 0, size = 208, prob = 0.03)
 p_k1_n2 <- dbinom(x = 1, size = 208, prob = 0.03)
-p_k0_n3 <- dbinom(x = 0, size = 208, prob = 0.03)
+p_k0_n3 <- pbinom(q = 0, size = 208, prob = 0.03)
 p_k2_n1 + p_k3_n1 * p_k0_n2 + p_k3_n1 * p_k1_n2 * p_k0_n3 < 0.05
 ```
 
-Like before, the minimal sample size per stage $n_s$ = 208 is only slightly
-larger than the minimal sample size for the first stage if the auditor decides
-to use a single-stage sampling plan, which is $n$ = 208.
+Unlike the previous example, the minimum sample size per stage, $n_s$ = 208, is
+not larger than the minimum sample size for the first stage if the auditor
+decides to use a single-stage sampling plan expecting $k$ = 2 misstatements,
+which is also $n$ = 208.
 
 ```{r}
 planning(materiality = 0.03, likelihood = "binomial", expected = 2)
@@ -228,22 +232,24 @@ planning(materiality = 0.03, likelihood = "binomial", expected = 2)
 
 ### Estimation
 
-Next, let's take a look at how you can use the `planning()` function to
-calculate the minimum sample size for estimating the misstatement in the
-population with a minimum precision. The precision is defined as the difference
-between the most likely misstatement and the upper confidence bound on the
-misstatement. For this example, the minimum precision is set to 2 percent of the
-population value.
+Next, let's explore how to use the `planning()` function to compute the minimum
+sample size needed to estimate the misstatement in the population with a certain
+minimum precision. Precision is defined as the gap between the most likely
+misstatement and the upper limit on the misstatement. For this example, the
+minimum precision is set to two percent of the population value. Note that
+'minimum' in this context implies that the precision in the auditor's inference
+should not exceed two percent.
 
 **Sampling objective**: Calculate a minimum sample size such that, when zero
 misstatements are found in the sample, there is a 95 percent chance that the
 misstatement in the population is at most 2 percent above the most likely
 misstatement.
 
-A minimum sample size for this sampling objective can be calculated by
-specifying the `min.precision` parameter in the `planning()` function, see the
-command below. The result shows that, given zero tolerable errors, the minimum
-sample size is 149 units.
+You can calculate the minimum sample size for this sampling objective by
+specifying the `min.precision` argument in the `planning()` function, as shown
+in the command below. The result indicates that, assuming $k$ = 0 tolerable
+misstatements in the sample, the minimum sample size is $n$ = 149 items or
+units.
 
 ```{r}
 planning(min.precision = 0.02, likelihood = "binomial")
@@ -251,54 +257,60 @@ planning(min.precision = 0.02, likelihood = "binomial")
 
 ## Bayesian approach
 
-Performing Bayesian planning requires an input for the `prior` argument in the
-`planning()` function. Setting `prior = TRUE` performs Bayesian planning using a
-[default prior](https://koenderks.github.io/jfa/articles/creating-prior.html#default-priors-method-default)
-conjugate to the specified `likelihood`. For example, the command below uses a
-default gamma($\alpha = 1$, $\beta = 1$) prior distribution to plan the sample.
+To carry out Bayesian planning, you need to provide an input for the `prior`
+argument in the `planning()` function. If you set `prior = TRUE`, the function
+will perform Bayesian planning using a [default prior](https://koenderks.github.io/jfa/articles/creating-prior.html#default-priors-method-default)
+that is conjugate to the specified `likelihood`. For instance, the command below
+employs a default gamma($\alpha$ = 1, $\beta$ = 1) prior distribution to plan
+the sample.
 
 ```{r}
 plan <- planning(materiality = 0.03, expected = 0, prior = TRUE)
 summary(plan)
 ```
 
-You can inspect how the prior distribution compares to the expected
-posterior distribution by using the `plot()` function. The expected posterior
-distribution is the posterior distribution that would occur if you actually
-observed the planned sample containing the expected misstatements.
+You can compare the prior distribution to the expected posterior distribution
+using the `plot()` function. The expected posterior distribution is the
+posterior distribution you would get if the planned sample containing the
+expected misstatements were actually observed.
 
 ```{r fig.align="center", fig.height=4, fig.width=6}
 plot(plan)
 ```
 
-Since the Bayesian approach to audit sampling iteratively uses the posterior
-distribution from the observed sample as a prior distribution for a possible
-second sample, it does not compromise the audit risk as a function of the number
-of tests. Therefore, in the Bayesian framework you can simply start sampling
-until there is sufficient evidence to make a decision [@rouder_2014]. That means
-that, whenever you find $k$ = 1 misstatement in the initial $n$ = 60 samples,
-computing the sample size extension simply requires you to compute a
-single-stage sample size under the expectation of one tolerable misstatement.
+The Bayesian approach to audit sampling uses the posterior distribution from the
+observed sample as a prior distribution for a potential second sample in an
+iterative manner. For this reason, this approach does not affect the sampling
+risk based on the number of tests [@rouder_2014]. Hence, in the Bayesian
+framework, it is entirely appropriate to start sampling until there is enough
+evidence to make a decision [@edwards_1963]. This means that if you find $k$ = 1
+misstatement in the initial $n_1$ = 99 samples, calculating the sample size
+extension simply involves computing the single-stage sample size under the
+expectation of $k$ = 1 tolerable misstatement. The total required sample size
+then becomes $n$ = 157, and the sample size extension therefore amounts to $n_2$
+= 158 - 99 = 59 items.
 
 ```{r}
 planning(materiality = 0.03, expected = 1, prior = TRUE)
 ```
 
-The input for the `prior` argument can also be an object created by the
-`auditPrior` function. If `planning()` receives a prior for which there is a
-conjugate likelihood available, it will inherit the likelihood from the prior.
-For example, the command below uses a custom beta($\alpha = 1$, $\beta = 10$)
-prior distribution to plan the sample using the binomial likelihood.
+The `prior` argument can also accept an object created by the `auditPrior()`
+function. If `planning()` receives a prior for which a conjugate likelihood is
+available, the planning will inherit the likelihood from the prior. For example,
+the command below uses a custom beta($\alpha$ = 1, $\beta$ = 10) prior
+distribution to plan the sample using the binomial likelihood. The minimum
+sample size in this case is $n$ = 89.
 
 ```{r}
 prior <- auditPrior(method = "param", likelihood = "binomial", alpha = 1, beta = 10)
 planning(materiality = 0.03, expected = 0, conf.level = 0.95, prior = prior)
 ```
 
-However, when there is no conjugate likelihood available, specifying the
-`likelihood` argument in `planning()` is required. For instance, the command
-below uses a Normal($\mu = 0$, $\sigma = 0.1$) prior in combination with the
-binomial likelihood to plan the sample size.
+However, if there is no conjugate likelihood available for the specified prior
+distribution, you need to manually specify the `likelihood` argument in the
+`planning()` function. For instance, the command below uses a Normal($\mu$ = 0,
+$\sigma$ = 0.1) prior in combination with the binomial likelihood to plan the
+sample. The minimum sample size in this case is $n$ = 96 items.
 
 ```{r}
 prior <- auditPrior(method = "param", likelihood = "normal", alpha = 0, beta = 0.1)
